@@ -3,7 +3,8 @@ Version 1.4.4
 -------------
 
 - sort catalogs in the manager alphabetically (#245)
-- fixes escaping of quotes in catalog headers (#290)
+- fixed escaping of quotes in catalog headers (#290)
+- fixed reformatting of obsolete entries in catalogs (#329)
 
 
 Version 1.4.3
